# mcp-composer

./: pyproject.toml
src/: api.py  downstream_controller.py  main.py
src/domain/: downstream_server.py
tests/: test_downstream_controller.py  test_servers_api.py
