[project]
name = "mcp-composer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.4",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.20.0",
]
